# swiggy-order

./: .gitignore  README.md  config.json  pyproject.toml
swiggy_order/: __init__.py  constants.py  utils.py
swiggy_order/apis/: __init__.py
