[tool.poetry]
name = "swiggy-order"
version = "1.0.0"
description = "Order food via terminal."
authors = ["Amresh Venugopal <amresh.venugopal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
docopt = "^0.6.2"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
order-food = 'swiggy_order:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
